tests/toy/neg/000752_mutation.toylang
program a = { a = 0 bool; } .
